--- a/package.json
+++ b/package.json
@@ -10,9 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.13",
+    "daisyui": "^5.1.13",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-router": "^7.8.1"
+    "react-icons": "^5.5.0",
+    "react-router": "^7.8.1",
+    "tailwindcss": "^4.1.13",
+    "use-local-storage-state": "^19.5.0",
+    "use-prefers-color-scheme": "^1.1.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
